# plotlyml

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
demo/: app.py  requirements.txt
demo-dash/: app.py  requirements.txt
demo-dash/pages/: distribution_drift.py  gallery.py  model_disagreement.py  quantile_evolution.py  utils.py
examples/: distribution_drift_example.py  model_disagreement_example.py  quantile_evolution_example.py
plotlyml/: __init__.py  _utils.py  distribution_drift.py  model_disagreement.py  quantile_evolution.py
tests/: test_primitives.py
