[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotlyml"
version = "0.1.0"
description = "ML Monitoring Visualization Primitives for Plotly — Distribution Drift, Model Disagreement, Quantile Evolution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "plotly", "visualization", "machine-learning",
    "data-drift", "monitoring", "mlops", "model-monitoring",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "plotly>=5.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.32", "numpy>=1.24", "pandas>=2.0"]
dev  = ["pytest", "numpy", "pandas", "ruff", "mypy"]

[project.urls]
Homepage    = "https://github.com/samibahig/plotlyml"
Issues      = "https://github.com/samibahig/plotlyml/issues"
HuggingFace = "https://huggingface.co/spaces/samibahig/plotlyml-demo"

[tool.hatch.build.targets.wheel]
packages = ["plotlyml"]

[tool.ruff]
line-length = 100
target-version = "py39"
